--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To do</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- <form> -->
+      <h1>Things to do</h1>
+      <div class="inputContainer">
+        <input id="taskBox" type="text" placeholder="Task..." value="" />
+        <button type="submit" class="submitButton" value="submitEntry">
+          Submit
+        </button>
+      </div>
+      <br>
+      <br>
+      <div class="listContainer">
+        <ul id="toDoItems">
+            
+        </ul>
+      </div>
+      <button id="dltButton">X</button>
+    <!-- </form> -->
+  </body>
+  <script src="script.js"></script>
 </html>
