Strikethrough and delete button working

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <br>
       <div class="listContainer">
         <ul id="toDoItems">
-            
+
         </ul>
       </div>
-      <button id="dltButton">X</button>
+      <!-- <button id="dltButton">X</button> -->
     <!-- </form> -->
   </body>
   <script src="script.js"></script>
