--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
   </head>
   <body>
     <!-- <form> -->
-      <h1>Things to do</h1>
-      <div class="inputContainer">
-        <input id="taskBox" type="text" placeholder="Task..." value="" />
-        <button type="submit" class="submitButton" value="submitEntry">
-          Submit
-        </button>
-      </div>
-      <br>
-      <br>
-      <div class="listContainer">
-        <ul id="toDoItems">
-
-        </ul>
-      </div>
-      <!-- <button id="dltButton">X</button> -->
+    <h1>Things to do</h1>
+    <div class="inputContainer">
+      <input id="taskBox" type="text" placeholder="Task..." value="" />
+      <button type="submit" class="submitButton" value="submitEntry">
+        Submit
+      </button>
+    </div>
+    <br />
+    <br />
+    <div class="listContainer">
+      <ul id="toDoItems"></ul>
+    </div>
+    <!-- <button id="dltButton">X</button> -->
     <!-- </form> -->
   </body>
   <script src="script.js"></script>
