buttons work and added css

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- <form> -->
-    <h1>Things to do</h1>
+    <h1>
+      <img src="lined-paper-paper.png" width="50px" alt="paper" />Angel's<img
+        src="lined-paper-paper.png"
+        width="50px"
+        alt="paper"
+      />
+    </h1>
+    <h2>TO DO List</h2>
+    <br />
+    <br />
     <div class="inputContainer">
       <input id="taskBox" type="text" placeholder="Task..." value="" />
       <button type="submit" class="submitButton" value="submitEntry">
@@ -20,8 +28,6 @@
     <div class="listContainer">
       <ul id="toDoItems"></ul>
     </div>
-    <!-- <button id="dltButton">X</button> -->
-    <!-- </form> -->
   </body>
   <script src="script.js"></script>
 </html>
