--- a/compare.html
+++ b/compare.html
@@ -17,17 +17,17 @@
     <h2>TO DO List</h2>
     <br />
     <br />
-    <form class="inputContainer">
+    <div class="inputContainer">
       <input id="taskBox" type="text" placeholder="Task..." value="" />
       <button type="submit" class="submitButton" value="submitEntry">
         Submit
       </button>
-    </form>
+    </div>
     <br />
     <br />
     <div class="listContainer">
       <ul id="toDoItems"></ul>
     </div>
-    <script src="script.js"></script>
   </body>
+  <script src="script.js"></script>
 </html>
